Move images to assets folder

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,7 +26,7 @@
     </header>
 
     <main>
-        <section class="hero" style="background-image: url('hero-banner.jpeg');">
+        <section class="hero" style="background-image: url('assets/hero-banner.jpeg');">
             <div class="hero-content">
                 <h1 class="hero-title">azexplore</h1>
                 <p class="hero-text">Explore, Connect, and Support Local Businesses Around You.</p>
@@ -35,14 +35,13 @@
 
         <section class="info-map-container">
             <div class="info-container">
-                <!-- Add your category items here with corresponding background images -->
-                <div class="info-item" style="background-image: url('cafe.jpeg');">
+                <div class="info-item" style="background-image: url('assets/cafe.jpeg');">
                     <h2>Cafes</h2>
                 </div>
-                <div class="info-item" style="background-image: url('handmades.jpeg');">
+                <div class="info-item" style="background-image: url('assets/handmades.jpeg');">
                     <h2>Shops</h2>
                 </div>
-                <div class="info-item" style="background-image: url('hostel.jpeg');">
+                <div class="info-item" style="background-image: url('assets/hostel.jpeg');">
                     <h2>Hostels</h2>
                 </div>
             </div>
