Remove API keys

--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>azexplore</title>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB_A9E-LevhVHc4-6W9xPOwn-t2GiPC6mw&callback=initMap"
+    <script src="https://maps.googleapis.com/maps/api/js?key=<Your Google Maps API KEY>callback=initMap"
         async defer></script>
     <script src="index.js" defer></script>
     <link rel="stylesheet" href="style.css">
